--- a/css/styles.css
+++ b/css/styles.css
@@ -383,9 +383,6 @@ template {
 .floated {
   display: block;
   text-align: center; }
-  @media (min-width: 50em) {
-    .floated {
-      text-align: left; } }
 
 html {
   font-size: 62.5%; }
@@ -398,6 +395,8 @@ body {
 a {
   text-decoration: none;
   color: #3d3d3d; }
+  a:hover {
+    text-decoration: underline; }
 
 img {
   max-width: 100%; }
